# Watermarker

./: .gitignore  LICENSE  NOTICE  README.md  Watermarker.spec  config.yaml  logo.icns  main.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: build.yaml
gui/: __main__.py  config.py  icon_rc.py  main.py  settings.py
watermarker/: __init__.py  config.py  constants.py  image_container.py  image_processor.py  utils.py
