[project]
name = "semi-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow>=11.0.0",
    "pydantic>=2.9.2",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "tqdm~=4.64",
]

[dependency-groups]
gui = ["PyQt-Fluent-Widgets"]
